# gazebo_sfm_plugin

./: CMakeLists.txt  README.md  package.xml
include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h
launch/: cafe.launch  cafe_ros2.launch.py  lab_spain.launch  lab_spain_walking_people.launch
media/models/: walk-blue.dae  walk-green.dae  walk-red.dae
media/models/building1/: model.config  model.sdf
media/models/building1/meshes/: building1.dae
media/models/construction_person_women/: model.config  model.sdf
media/models/construction_person_women/meshes/: model.dae
media/models/paintbucket/: model.config  model.sdf
media/models/paintbucket/meshes/: paintbucket.dae
media/models/paintbuckets/: model.config  model.sdf
media/models/painter/: model.config  model.sdf
media/models/painter_with_roller/: model.config  model.sdf
media/models/painter_with_roller/meshes/: painter_with_roller.dae
media/models/painterbucket/: model.config  model.sdf
media/models/painterbucket/meshes/: painterbucket.dae
media/models/worker_bending/: model.config  model.sdf
media/models/worker_bending/meshes/: worker_bending.dae
src/: PedestrianSFMPlugin.cpp
worlds/: cafe.world  cafe3.world  lab_spain.world  lab_spain_walking_people.world
