<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sfm_plugin</name>
  <version>1.0.0</version>
  <description>The gazebo_sfm_plugin package</description>

  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/robotics-upo/gazebo_sfm_plugin</url>

  <author>Noé Pérez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>lightsfm</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>lightsfm</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
