<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_sfm_plugin</name>
  <version>1.0.0</version>
  <description>The gazebo_sfm_plugin package</description>

  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/robotics-upo/gazebo_sfm_plugin</url>

  <author>Noé Pérez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>lightsfm</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
